[gd_scene load_steps=5 format=3 uid="uid://c2c37qmgelhot"]

[ext_resource type="Script" path="res://Scripts/bones.gd" id="1_40ypm"]
[ext_resource type="Texture2D" uid="uid://v0y6jav5qvjw" path="res://Assets/Sprites/Bone.png" id="1_jelgt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4cj5m"]
size = Vector2(80, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2w33q"]
size = Vector2(80, 508)

[node name="Bones" type="Node2D"]
z_index = -1
script = ExtResource("1_40ypm")

[node name="Score_Zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Score_Zone"]
shape = SubResource("RectangleShape2D_4cj5m")

[node name="Lower_Bone" type="Area2D" parent="."]
position = Vector2(0, 253)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lower_Bone"]
shape = SubResource("RectangleShape2D_2w33q")

[node name="Sprite" type="Sprite2D" parent="Lower_Bone"]
scale = Vector2(0.75, 1)
texture = ExtResource("1_jelgt")

[node name="Upper_Bone" type="Area2D" parent="."]
position = Vector2(0, -253)
scale = Vector2(-1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upper_Bone"]
shape = SubResource("RectangleShape2D_2w33q")

[node name="Sprite" type="Sprite2D" parent="Upper_Bone"]
scale = Vector2(0.75, 1)
texture = ExtResource("1_jelgt")

[connection signal="body_entered" from="Score_Zone" to="." method="_on_score_zone_body_entered"]
[connection signal="body_entered" from="Lower_Bone" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Upper_Bone" to="." method="_on_body_entered"]
